--- a/GUI/GUI/GUI.csproj
+++ b/GUI/GUI/GUI.csproj
@@ -62,11 +62,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Ideas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Ideas.Designer.cs">
+      <DependentUpon>Ideas.cs</DependentUpon>
+    </Compile>
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Regestration.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Regestration.Designer.cs">
+      <DependentUpon>Regestration.cs</DependentUpon>
     </Compile>
     <Compile Include="RMPage.cs">
       <SubType>Form</SubType>
@@ -76,6 +88,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Ideas.resx">
+      <DependentUpon>Ideas.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
@@ -88,6 +103,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Regestration.resx">
+      <DependentUpon>Regestration.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="RMPage.resx">
       <DependentUpon>RMPage.cs</DependentUpon>
     </EmbeddedResource>
